# aether-explorer

./: .env.example  .gitignore  BUG.md  CHANGELOG.md  CONTRIBUTING.md  FEATURES.md  PROJECT.md  README.md  README_EN.md  SECURITY.md  TODO.md  eslint.config.js  index.html  metadata.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/commands/: codex.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  security_report.yml
.github/workflows/: release.yml  test.yml
codex/: 01-updater.md  02-drag-drop-move.md  03-sidebar-tab-sync.md  04-app-icon-system.md  05-favorites-tags.md  06-release-runbook.md  07-desktop-shell-file-experience.md  08-default-start-page.md  09-test-release-safety-baseline.md  10-color-fine-tuning.md  11-ai-file-assistant.md  12-macos-tcc-permissions.md  13-file-operation-ux.md  14-liquid-glass-file-workbench.md  README.md  scratch.md
docs/: CROSS_WINDOW_DRAG.md  FULL_TEST_REPORT.md  IMPROVEMENT_PROPOSALS.md  PERF_PLAN.md  PRIVACY.md  QUICK_DELIVERY_PLAN.md  RELEASE_AUDIT.md  SMOKE_TEST.md  TEST_PLAN.md
docs/aegis/: BASELINE-GOVERNANCE.md  INDEX.md  README.md
liquid-glass-research-Docs/: liquid-glass-research.md  tauri-liquid-glass-feasibility.md
scripts/: check-ci-gates.mjs  check-i18n-coverage.mjs  check-readme-sync.mjs  dev.mjs  release.sh  validate-fda-evidence.mjs  validate-macos-app-bundle.mjs  validate-macos-permission-model.mjs  validate-macos-permission-release-evidence.mjs
src/: App.tsx  constants.ts  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  lib.rs  lib_tests.rs  models.rs  native_menu.rs  remote.rs
src-tauri/src/commands/: diagnostics.rs  disk.rs  fs.rs  terminal.rs  transfer.rs  window.rs
src/__tests__/: ai-ops-log.test.ts  app-error.test.ts  asset-url-cache.test.ts  column-navigation.test.ts  file-icon.test.ts  (+26 more)
(+363 files in other folders)
