[package]
name = "aether-explorer"
version = "0.1.1-draft"
description = "A premium macOS file manager with glassmorphic UI"
authors = ["Aether Team"]
license = "MIT"
repository = "https://github.com/aether/explorer"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = ["protocol-asset", "macos-private-api", "devtools"] }
tauri-plugin-log = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
chrono = "0.4"
trash = "5"
zip = "2"
