[package]
name = "aether-explorer"
version = "0.4.10"
description = "A local-first macOS file workbench"
authors = ["Aether Team"]
license = "MIT"
repository = "https://github.com/HaoRangQi/aether-explorer"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = ["protocol-asset", "macos-private-api", "devtools", "tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
chrono = "0.4"
trash = "5"
zip = "2"
tauri-plugin-http = "2.5.9"
tauri-plugin-fs = "2.5.1"
tauri-plugin-liquid-glass = "0.1.6"
keyring = { version = "3.6.3", features = ["apple-native"] }
quick-xml = "0.39.4"
reqwest = { version = "0.13.3", default-features = false, features = ["blocking", "native-tls"] }
ssh2 = "0.9.5"
suppaftp = "=6.2.0"
